kube/objects/feedserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedserver
  labels:
    app: feedserver
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feedserver
  template:
    metadata:
      labels:
        app: feedserver
    spec:
      containers:
      - name: feedserver
        image: ramandev/res-svc:v1
        ports:
        - containerPort: 3002
