kube/objects/springboot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sbootserver
  labels:
    app: sboot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sboot
  template:
    metadata:
      labels:
        app: sboot
    spec:
      containers:
      - name: sboot
        image: ramandev/devrepo:v1
        ports:
        - containerPort: 8080
