kube/objects/stockprice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stockpriceserver
  labels:
    app: stockpriceserver
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stockpriceserver
  template:
    metadata:
      labels:
        app: stockpriceserver
    spec:
      containers:
      - name: stockpriceserver
        image: ramandev/res-svc:v2
        ports:
        - containerPort: 3003
