kube/objects/feedserver-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: feed-service
  labels:
    run: feed-service
spec:
  type: NodePort
  ports:
  - port: 3002
    protocol: TCP
  selector:
    app: feedserver
