kube/objects/interestserver-svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: interest-service
  labels:
    run: interest-service
spec:
  ports:
  - port: 3001
    protocol: TCP
  selector:
    app: interestserver
