kube/objects/interestserver-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: interest-service
  labels:
    run: interest-service
spec:
  type: NodePort
  ports:
  - port: 3001
    protocol: TCP
  selector:
    app: interestserver
