kube/objects/springboot-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sboot-service
  labels:
    run: sboot-service
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: sboot
