kube/objects/stockprice-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: stockprice-service
  labels:
    run: stockprice-service
spec:
  type: NodePort
  ports:
  - port: 3003
    protocol: TCP
  selector:
    app: stockpriceserver
