kube/objects/webapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: resweb-service
  labels:
    run: resweb-service
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: resweb
