kube/objects/ingress-2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: researchportal.com
    http:
      paths:
      - path: /
        backend:
          serviceName: resweb-service
          servicePort: 80
